CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - Current

reporting application
======================
* Fix for JMX collection view and paging (CC-394). Patch by Tim Shadel.
* Added web.xml parameter for cruisecontrol.jmxport, which can be overridden by the environment variable as documented in web.xml.



CruiseControl Release Notes - 2.4.1

contrib
======================
* add option for XmlLoggerWithStatus to ignore certain targets (CC-259). Patch by Brad Clarke
* add cross-platform JavaServiceWrapper (CC-87). Submitted by Eric Pugh

build loop
======================

configxml.html:
----------------------
* Fix broken links to the puligin classes' javadoc
* cvs was renamed ConcurrentVersionsSystem

CruiseControlController:
----------------------
* Properly remove projects when appropriate on setConfigFile() (CC-408). Patch by Matt Albrecht

CruiseControlControllerJMXAdaptor:
----------------------
* Notify listeners on projects added/removed (CC-409). Patch by Matt Albrecht

ExecBuilder:
----------------------
* New plug-in for executing a specified command as the build action (CC-317). Submitted by Kevin Lee

HTMLEmailPublisher:
----------------------
* add option to pass XSLT parameters to the XSL stylesheets used.

JMX interface:
----------------------
* Sort arrays and collections by their index's numeric value (CC-232). Patch by Valdis Rigdon

Maven2Builder:
----------------------
* Add new builder for Maven2 (CC-363). Submitted by De Moor Yves. Tested, documented and patched by Dan Rollo.

Project:
----------------------
* Fix problem where we could have two events being pushed to the same listeners on different threads when the project is started. Patch by Frits Wallin

PropertyFileLabelIncrementer:
----------------------
* New plug-in that returns the label from a properties file (CC-242). Submitted by Eugene Kuleshov

WeblogPublisher:
----------------------